manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wil-app
  namespace: dev

spec:
  replicas: 3
  selector:
    matchLabels:
      app: wil-app
  template:
    metadata:
      labels:
        app: wil-app
    spec:
      containers:
      - name: wil-app
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
        resources:
            requests:
              memory: "16Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "100m"
